tests/fixtures/pass/modules/module_global_reassign_from_imported_fn.walrus
import "../../modules/edge_counter.walrus" as c;

println(c.get());
println(c.inc());
println(c.inc());
println(c.get());
