tests/fixtures/fail/stdlib/stdlib_http_invalid_body_limit_vm.walrus
import "std/http" as http;

http.read_request(1, -1);
